[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
serde_json = "1.0.56"
serde_derive = "1.0.114"
gloo = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.js-sys]
version = "0.3.5"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Document',
  'Window',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'MouseEvent',
]